--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Original Text: there were better sense in the sad mechanic exercise of determining the reason of its absence where it is not in the novels of the last hundred years there are vast numbers of young ladies with whom it might be a pleasure to fall in love there are at least five with whom as it seems to me no man of taste and spirit can help doing so\n",
-      "Encoded Text: gbvfv qvfv hvggvf svxsv ux gbv sna lvybnxuy vwvfyusv pe avgvfluxuxj gbv fvnspx pe ugs nhsvxyv qbvfv ug us xpg ux gbv xpkvos pe gbv onsg bcxafva ivnfs gbvfv nfv knsg xclhvfs pe ipcxj onauvs qugb qbpl ug lujbg hv n dovnscfv gp enoo ux opkv gbvfv nfv ng ovnsg eukv qugb qbpl ns ug svvls gp lv xp lnx pe gnsgv nxa sdufug ynx bvod apuxj sp\n"
+      "Encoded Text: zswqw gwqw bwzzwq xwuxw yu zsw xmf ewasmuya whwqayxw kt fwzwqeyuyuc zsw qwmxku kt yzx mbxwuaw gswqw yz yx ukz yu zsw ukvwpx kt zsw pmxz siufqwf owmqx zswqw mqw vmxz uiebwqx kt okiuc pmfywx gyzs gske yz eycsz bw m lpwmxiqw zk tmpp yu pkvw zswqw mqw mz pwmxz tyvw gyzs gske mx yz xwwex zk ew uk emu kt zmxzw muf xlyqyz amu swpl fkyuc xk\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide_row_by_sum(matrix):\n",
+    "    row_sums = np.sum(matrix, axis=1)  # Calculate the sum of each row\n",
+    "    divided_matrix = (\n",
+    "        matrix / row_sums[:, np.newaxis]\n",
+    "    )  # Divide each element by the corresponding row sum\n",
+    "    return divided_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,34 +380,12 @@
     "                if observed[k] == j:\n",
     "                    B[i,j] += gamma[k, i]\n",
     "                    \n",
-    "    return B/np.sum(B, axis = 0)"
+    "    return divide_row_by_sum(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.68218587, 0.27143628],\n",
-       "       [0.31781413, 0.72856372]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gamma\n",
-    "update_B(gamma, observed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,24 +401,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3.96425274e-61, 9.26996259e-55],\n",
-       "       [1.00000000e+00, 1.00000000e+00]])"
+       "array([[0.44294088, 0.55705912],\n",
+       "       [0.27897937, 0.72102063]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "B_start = np.zeros((2, 2)) + 0.5\n",
-    "Baum_Welch(A, B_start, pi, observed)"
+    "Baum_Welch(A, B, pi, observed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi = [0.5, 0.5]\n",
+    "N = 10000\n",
+    "\n",
+    "A = np.array([[0.2, 0.8],\n",
+    "              [0.6, 0.4]])\n",
+    "\n",
+    "chain = np.zeros(N)\n",
+    "chain[0] = np.random.binomial(1, 0.5)\n",
+    "for i in range(1, N):\n",
+    "    if chain[i-1] == 0:\n",
+    "        chain[i] = np.random.binomial(1, 0.8)\n",
+    "    else: \n",
+    "         chain[i] = np.random.binomial(1, 0.4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = chain.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B_true = np.array([[1, 0],\n",
+    "                   [0, 1]])\n",
+    "\n",
+    "viewed_chain = np.zeros(N)\n",
+    "for i in range(N):\n",
+    "    if chain[i] == 0 : \n",
+    "        viewed_chain[i] = np.random.binomial(1, B[0, 1])\n",
+    "    else:\n",
+    "        viewed_chain[i] = np.random.binomial(1, B[1, 1])\n",
+    "\n",
+    "viewed_chain = viewed_chain.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B_start = np.zeros((2, 2)) + 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2559/3536428245.py:11: RuntimeWarning: invalid value encountered in divide\n",
+      "  gamma[n_nodes-1] = alpha[n_nodes-1] / np.sum(alpha[n_nodes-1])\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2559/3536428245.py:14: RuntimeWarning: invalid value encountered in divide\n",
+      "  gamma[i] = alpha[i] * beta[i] / np.sum(alpha[i] * beta[i])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan],\n",
+       "       [nan, nan]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Baum_Welch(A, B_start, pi, observed = viewed_chain)"
    ]
   }
  ],
