--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -125,6 +125,7 @@
    "outputs": [],
    "source": [
     "from prove.src.Probability import ProbabilityMatrix\n",
+    "\n",
     "with open(\"texts/moby_dick.txt\", \"r\") as file:\n",
     "    text = file.read()\n",
     "\n",
@@ -143,9 +144,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "# Initialize matrix of emissions to uniform.\n",
     "B = np.zeros_like(pm.matrix)\n",
-    "B = B + 1/(27*27)"
+    "B = B + 1 / (27 * 27)"
    ]
   },
   {
@@ -175,6 +177,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\n",
     "# We need an algorithm to perform belief propagation on our hmm\n",
     "def forward_HMM(A, B, pi, observed):\n",
     "    \"\"\"\n",
@@ -190,14 +194,14 @@
     "\n",
     "    for j in range(n_states):\n",
     "        alpha[0, j] = pi[j] * B[j, observed[0]]\n",
-    "    \n",
+    "\n",
     "    for i in range(1, n_nodes):\n",
-    "\n",
     "        for j in range(n_states):\n",
-    "\n",
     "            for k in range(n_states):\n",
-    "                alpha[i, j] = alpha[i, j] + A[k,j] * B[j, observed[i]] * alpha[i-1, k]\n",
-    "    \n",
+    "                alpha[i, j] = (\n",
+    "                    alpha[i, j] + A[k, j] * B[j, observed[i]] * alpha[i - 1, k]\n",
+    "                )\n",
+    "\n",
     "    return alpha"
    ]
   },
@@ -208,10 +212,8 @@
    "outputs": [],
    "source": [
     "pi = np.array([0.2, 0.8])\n",
-    "A = np.array([[0.6, 0.4],\n",
-    "              [0.3, 0.7]])\n",
-    "B = np.array([[0.5, 0.5],\n",
-    "              [0.1, 0.9]])\n",
+    "A = np.array([[0.6, 0.4], [0.3, 0.7]])\n",
+    "B = np.array([[0.5, 0.5], [0.1, 0.9]])\n",
     "observed = np.array([1, 0])"
    ]
   },
@@ -231,6 +233,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\n",
     "# We need an algorithm to perform belief propagation on our hmm\n",
     "def backward_HMM(A, B, observed):\n",
     "    \"\"\"\n",
@@ -241,19 +245,19 @@
     "    \"\"\"\n",
     "    n_nodes = len(observed)\n",
     "    n_states = A.shape[0]\n",
-    "    beta = np.zeros((n_nodes-1, n_states))\n",
+    "    beta = np.zeros((n_nodes - 1, n_states))\n",
     "\n",
     "    for j in range(n_states):\n",
     "        for k in range(n_states):\n",
-    "            beta[-1, j] = beta[-1, j] + A[j,k] * B[k, observed[n_nodes-1]]\n",
+    "            beta[-1, j] = beta[-1, j] + A[j, k] * B[k, observed[n_nodes - 1]]\n",
     "\n",
-    "    for i in range(n_nodes-3, -1, -1):\n",
-    "\n",
+    "    for i in range(n_nodes - 3, -1, -1):\n",
     "        for j in range(n_states):\n",
-    "\n",
     "            for k in range(n_states):\n",
-    "                beta[i, j] = beta[i, j] + A[j,k] * B[k, observed[i+1]] * beta[i+1, k]\n",
-    "    \n",
+    "                beta[i, j] = (\n",
+    "                    beta[i, j] + A[j, k] * B[k, observed[i + 1]] * beta[i + 1, k]\n",
+    "                )\n",
+    "\n",
     "    return beta"
    ]
   },
@@ -263,10 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[0.6, 0.4],\n",
-    "              [0.3, 0.7]])\n",
-    "B = np.array([[0.5, 0.5],\n",
-    "              [0.1, 0.9]])\n",
+    "A = np.array([[0.6, 0.4], [0.3, 0.7]])\n",
+    "B = np.array([[0.5, 0.5], [0.1, 0.9]])\n",
     "observed = np.array([1, 0, 1])"
    ]
   },
@@ -285,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = forward_HMM(A,B,pi,observed)"
+    "alpha = forward_HMM(A, B, pi, observed)"
    ]
   },
   {
@@ -300,13 +302,13 @@
     "    beta: list containing backward messages\n",
     "    i : hidden element for which you want the conditional on the observed variables (i = 1, ..., M)\n",
     "    \"\"\"\n",
-    "    if i==0:\n",
+    "    if i == 0:\n",
     "        raise ValueError(\"no zio serve il numero di variabile\")\n",
-    "    \n",
-    "    if i == alpha.shape[0]:\n",
-    "        return alpha[i-1]/np.sum(alpha[i-1])\n",
     "\n",
-    "    gamma = alpha[i-1] * beta[i-1]\n",
+    "    if i == alpha.shape[0]:\n",
+    "        return alpha[i - 1] / np.sum(alpha[i - 1])\n",
+    "\n",
+    "    gamma = alpha[i - 1] * beta[i - 1]\n",
     "    gamma = gamma / np.sum(gamma)\n",
     "\n",
     "    return gamma"
@@ -325,14 +327,14 @@
     "    \"\"\"\n",
     "    n_nodes = alpha.shape[0]\n",
     "    n_states = alpha.shape[1]\n",
-    "    \n",
-    "    gamma = np.zeros((n_nodes, n_states))\n",
-    "    \n",
-    "    gamma[n_nodes-1] = alpha[n_nodes-1] / np.sum(alpha[n_nodes-1])\n",
     "\n",
-    "    for i in range(n_nodes-1):\n",
+    "    gamma = np.zeros((n_nodes, n_states))\n",
+    "\n",
+    "    gamma[n_nodes - 1] = alpha[n_nodes - 1] / np.sum(alpha[n_nodes - 1])\n",
+    "\n",
+    "    for i in range(n_nodes - 1):\n",
     "        gamma[i] = alpha[i] * beta[i] / np.sum(alpha[i] * beta[i])\n",
-    "        \n",
+    "\n",
     "    return gamma"
    ]
   },
@@ -368,18 +370,17 @@
    "outputs": [],
    "source": [
     "def update_B(gamma, observed):\n",
-    "    \n",
     "    n_nodes = gamma.shape[0]\n",
     "    n_states = gamma.shape[1]\n",
     "\n",
     "    B = np.zeros((n_states, n_states))\n",
     "\n",
     "    for i in range(n_states):\n",
-    "        for j  in range(n_states):\n",
+    "        for j in range(n_states):\n",
     "            for k in range(len(observed)):\n",
     "                if observed[k] == j:\n",
-    "                    B[i,j] += gamma[k, i]\n",
-    "                    \n",
+    "                    B[i, j] += gamma[k, i]\n",
+    "\n",
     "    return divide_row_by_sum(B)"
    ]
   },
@@ -389,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Baum_Welch(A, B_start, pi, observed, maxIter = 100):\n",
+    "def Baum_Welch(A, B_start, pi, observed, maxIter=100):\n",
     "    B = np.copy(B_start)\n",
     "    for it in range(maxIter):\n",
     "        alpha = forward_HMM(A, B, pi, observed)\n",
@@ -429,25 +430,16 @@
     "pi = [0.5, 0.5]\n",
     "N = 10000\n",
     "\n",
-    "A = np.array([[0.2, 0.8],\n",
-    "              [0.6, 0.4]])\n",
+    "A = np.array([[0.2, 0.8], [0.6, 0.4]])\n",
     "\n",
     "chain = np.zeros(N)\n",
     "chain[0] = np.random.binomial(1, 0.5)\n",
     "for i in range(1, N):\n",
-    "    if chain[i-1] == 0:\n",
+    "    if chain[i - 1] == 0:\n",
     "        chain[i] = np.random.binomial(1, 0.8)\n",
-    "    else: \n",
-    "         chain[i] = np.random.binomial(1, 0.4)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    else:\n",
+    "        chain[i] = np.random.binomial(1, 0.4)\n",
+    "\n",
     "chain = chain.astype(int)"
    ]
   },
@@ -457,12 +449,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B_true = np.array([[1, 0],\n",
-    "                   [0, 1]])\n",
+    "B_true = np.array([[1, 0], [0, 1]])\n",
     "\n",
     "viewed_chain = np.zeros(N)\n",
     "for i in range(N):\n",
-    "    if chain[i] == 0 : \n",
+    "    if chain[i] == 0:\n",
     "        viewed_chain[i] = np.random.binomial(1, B[0, 1])\n",
     "    else:\n",
     "        viewed_chain[i] = np.random.binomial(1, B[1, 1])\n",
@@ -507,7 +498,7 @@
     }
    ],
    "source": [
-    "Baum_Welch(A, B_start, pi, observed = viewed_chain)"
+    "Baum_Welch(A, B_start, pi, observed=viewed_chain)"
    ]
   }
  ],
