--- a/hmm_SCALING.ipynb
+++ b/hmm_SCALING.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prova con scaling factor ( da rvidere)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +29,12 @@
     "    n_nodes = len(observed)\n",
     "    n_states = A.shape[0]\n",
     "    alpha = np.zeros((n_nodes, n_states))\n",
+    "    c = np.zeros(n_nodes)\n",
     "\n",
     "    for j in range(n_states):\n",
     "        alpha[0, j] = pi[j] * B[j, observed[0]]\n",
+    "\n",
+    "    c[0] = 1.0 / np.sum(alpha[0])\n",
     "\n",
     "    for i in range(1, n_nodes):\n",
     "        for j in range(n_states):\n",
@@ -32,17 +43,19 @@
     "                    alpha[i, j] + A[k, j] * B[j, observed[i]] * alpha[i - 1, k]\n",
     "                )\n",
     "\n",
-    "    return alpha"
+    "            c[i] = 1.0 / np.sum(alpha[i])\n",
+    "\n",
+    "    return alpha, c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We need an algorithm to perform belief propagation on our hmm\n",
-    "def backward_HMM(A, B, observed):\n",
+    "def backward_HMM(A, B, observed, c):\n",
     "    \"\"\"\n",
     "    A: transition\n",
     "    B: emission\n",
@@ -55,21 +68,21 @@
     "\n",
     "    for j in range(n_states):\n",
     "        for k in range(n_states):\n",
-    "            beta[-1, j] = beta[-1, j] + A[j, k] * B[k, observed[n_nodes - 1]]\n",
+    "            beta[-1, j] = (beta[-1, j] + A[j, k] * B[k, observed[n_nodes - 1]]) * c[-1]\n",
     "\n",
     "    for i in range(n_nodes - 3, -1, -1):\n",
     "        for j in range(n_states):\n",
     "            for k in range(n_states):\n",
     "                beta[i, j] = (\n",
     "                    beta[i, j] + A[j, k] * B[k, observed[i + 1]] * beta[i + 1, k]\n",
-    "                )\n",
+    "                ) * c[i]\n",
     "\n",
     "    return beta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Baum_Welch(A, B_start, pi, observed, maxIter=100):\n",
     "    B = np.copy(B_start)\n",
     "    for it in range(maxIter):\n",
-    "        alpha = forward_HMM(A, B, pi, observed)\n",
-    "        beta = backward_HMM(A, B, observed)\n",
+    "        alpha, c = forward_HMM(A, B, pi, observed)\n",
+    "        beta = backward_HMM(A, B, observed, c)\n",
     "        gamma = compute_all_conditional(alpha, beta)\n",
     "        B = update_B(gamma, observed)\n",
     "    return B"
@@ -168,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# gpt version of scaling\n",
     "\n",
     "\n",
     "def forward_HMM_scaled(A, B, pi, observed):\n",
@@ -225,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# questo non so cosa sia\n",
     "\n",
     "\n",
-    "def baum_welch(A, B_start, pi, observed, maxiter):\n",
+    "def baum_welch_gpt_not_scaling(A, B_start, pi, observed, maxiter):\n",
     "    N = A.shape[0]  # Number of states\n",
     "    M = A.shape[1]  # Number of possible emissions\n",
     "    T = len(observed)  # Length of observed chain\n",
@@ -287,6 +300,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def baum_welch_gpt_scaling(A, B_start, pi, observed, maxiter=100):\n",
+    "    N = A.shape[0]  # Number of states\n",
+    "    M = A.shape[1]  # Number of possible emissions\n",
+    "    T = len(observed)  # Length of observed chain\n",
+    "\n",
+    "    B = B_start.copy()  # Make a copy of initial emission probabilities\n",
+    "\n",
+    "    for _ in range(maxiter):\n",
+    "        # Forward-Backward algorithm (Expectation step)\n",
+    "        alpha = np.zeros((T, N))\n",
+    "        beta = np.zeros((T, N))\n",
+    "        c = np.zeros(T)\n",
+    "\n",
+    "        # Forward pass\n",
+    "        alpha[0] = pi * B[:, observed[0]]\n",
+    "        c[0] = 1.0 / np.sum(alpha[0])\n",
+    "        alpha[0] *= c[0]\n",
+    "        for t in range(1, T):\n",
+    "            alpha[t] = np.dot(alpha[t - 1], A) * B[:, observed[t]]\n",
+    "            c[t] = 1.0 / np.sum(alpha[t])\n",
+    "            alpha[t] *= c[t]\n",
+    "\n",
+    "        # Backward pass\n",
+    "        beta[T - 1] = 1\n",
+    "        beta[T - 1] *= c[T - 1]\n",
+    "        for t in range(T - 2, -1, -1):\n",
+    "            beta[t] = np.dot(A, beta[t + 1] * B[:, observed[t + 1]])\n",
+    "            beta[t] *= c[t]\n",
+    "\n",
+    "        # Scaling factors\n",
+    "        scale = np.cumprod(c)\n",
+    "        alpha *= scale[:, np.newaxis]\n",
+    "        beta *= scale[:, np.newaxis]\n",
+    "\n",
+    "        # Compute gamma and xi matrices\n",
+    "        gamma = alpha * beta\n",
+    "        xi = np.zeros((T - 1, N, N))\n",
+    "        for t in range(T - 1):\n",
+    "            xi[t] = alpha[t][:, np.newaxis] * A * B[:, observed[t + 1]] * beta[t + 1]\n",
+    "\n",
+    "        # Maximization step\n",
+    "        B_new = np.zeros((N, M))\n",
+    "        for i in range(N):\n",
+    "            for j in range(M):\n",
+    "                B_new[i, j] = np.sum(gamma[:, i] * (observed == j)) / np.sum(\n",
+    "                    gamma[:, i]\n",
+    "                )\n",
+    "\n",
+    "        # Check for convergence\n",
+    "        if np.allclose(B, B_new):\n",
+    "            break\n",
+    "\n",
+    "        B = B_new\n",
+    "\n",
+    "    return B"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -296,21 +375,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m A \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m0.6\u001b[39m, \u001b[39m0.4\u001b[39m], [\u001b[39m0.3\u001b[39m, \u001b[39m0.7\u001b[39m]])\n\u001b[1;32m      2\u001b[0m B \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m0.5\u001b[39m, \u001b[39m0.5\u001b[39m], [\u001b[39m0.1\u001b[39m, \u001b[39m0.9\u001b[39m]])\n\u001b[1;32m      3\u001b[0m pi \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m0.2\u001b[39m, \u001b[39m0.8\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = np.array([[0.6, 0.4], [0.3, 0.7]])\n",
     "B = np.array([[0.5, 0.5], [0.1, 0.9]])\n",
@@ -318,24 +385,24 @@
     "observed = np.array([1, 0, 1])\n",
     "B_start = np.zeros((2, 2)) + 0.5\n",
     "\n",
-    "alpha = forward_HMM(A, B, pi, observed)\n",
-    "beta = backward_HMM(A, B, observed)\n",
+    "alpha, c = forward_HMM(A, B, pi, observed)\n",
+    "beta = backward_HMM(A, B, observed, c)\n",
     "gamma = compute_all_conditional(alpha, beta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.44294088, 0.55705912],\n",
-       "       [0.27897937, 0.72102063]])"
+       "array([[0.61345426, 0.38654574],\n",
+       "       [0.14035149, 0.85964851]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -356,23 +423,56 @@
        "       [0.36155231, 0.63844769]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baum_welch(A, B_start, pi, observed, maxiter=100)"
+    "baum_welch_gpt_not_scaling(A, B_start, pi, observed, maxiter=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1419852217.py:39: RuntimeWarning: overflow encountered in multiply\n",
+      "  gamma = alpha * beta\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1419852217.py:48: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  B_new[i, j] = np.sum(gamma[:, i] * (observed == j)) / np.sum(\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1419852217.py:48: RuntimeWarning: invalid value encountered in multiply\n",
+      "  B_new[i, j] = np.sum(gamma[:, i] * (observed == j)) / np.sum(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan],\n",
+       "       [nan, nan]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baum_welch_gpt_scaling(A, B_start, pi, observed, maxiter=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "pi = [0.5, 0.5]\n",
-    "N = 1000\n",
+    "N = 10000\n",
     "\n",
     "A = np.array([[0.2, 0.8], [0.6, 0.4]])\n",
     "\n",
@@ -389,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,19 +516,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.00882702, 0.99117298],\n",
-       "       [0.44826153, 0.55173847]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/2378624948.py:30: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  c[i] = 1.0 / np.sum(alpha[i])\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/2378624948.py:30: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  c[i] = 1.0 / np.sum(alpha[i])\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1766464708.py:11: RuntimeWarning: invalid value encountered in divide\n",
+      "  gamma[n_nodes - 1] = alpha[n_nodes - 1] / np.sum(alpha[n_nodes - 1])\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1766464708.py:14: RuntimeWarning: invalid value encountered in divide\n",
+      "  gamma[i] = alpha[i] * beta[i] / np.sum(alpha[i] * beta[i])\n",
+      "/var/folders/m2/r059lv3n7nq9x6gh78v25xk80000gn/T/ipykernel_96935/1766464708.py:14: RuntimeWarning: invalid value encountered in multiply\n",
+      "  gamma[i] = alpha[i] * beta[i] / np.sum(alpha[i] * beta[i])\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Baum_Welch(A, B_start, pi, observed\u001b[39m=\u001b[39;49mviewed_chain, maxIter\u001b[39m=\u001b[39;49m\u001b[39m10000\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[8], line 4\u001b[0m, in \u001b[0;36mBaum_Welch\u001b[0;34m(A, B_start, pi, observed, maxIter)\u001b[0m\n\u001b[1;32m      2\u001b[0m B \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcopy(B_start)\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m it \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(maxIter):\n\u001b[0;32m----> 4\u001b[0m     alpha, c \u001b[39m=\u001b[39m forward_HMM(A, B, pi, observed)\n\u001b[1;32m      5\u001b[0m     beta \u001b[39m=\u001b[39m backward_HMM(A, B, observed, c)\n\u001b[1;32m      6\u001b[0m     gamma \u001b[39m=\u001b[39m compute_all_conditional(alpha, beta)\n",
+      "Cell \u001b[0;32mIn[2], line 26\u001b[0m, in \u001b[0;36mforward_HMM\u001b[0;34m(A, B, pi, observed)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_states):\n\u001b[1;32m     25\u001b[0m         \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_states):\n\u001b[0;32m---> 26\u001b[0m             alpha[i, j] \u001b[39m=\u001b[39m (\n\u001b[1;32m     27\u001b[0m                 alpha[i, j] \u001b[39m+\u001b[39m A[k, j] \u001b[39m*\u001b[39m B[j, observed[i]] \u001b[39m*\u001b[39m alpha[i \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m, k]\n\u001b[1;32m     28\u001b[0m             )\n\u001b[1;32m     30\u001b[0m         c[i] \u001b[39m=\u001b[39m \u001b[39m1.0\u001b[39m \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39msum(alpha[i])\n\u001b[1;32m     32\u001b[0m \u001b[39mreturn\u001b[39;00m alpha, c\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
