Correct Viterbi algorithm

--- a/viterbi.ipynb
+++ b/viterbi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -35,11 +35,11 @@
        "array([[[0.24, 0.35],\n",
        "        [0.72, 0.05]],\n",
        "\n",
-       "       [[0.06, 0.35],\n",
-       "        [0.18, 0.05]]])"
+       "       [[0.24, 0.35],\n",
+       "        [0.72, 0.05]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,17 +47,17 @@
    "source": [
     "A = np.array([[0.3, 0.7], [0.9, 0.1]])\n",
     "B = np.array([[0.2, 0.8], [0.5, 0.5]])\n",
-    "observed = np.array([0, 1, 0])\n",
+    "observed = np.array([0, 1, 1])\n",
     "compute_f(A, B, observed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Viterbi(A, B, pi, observed):\n",
+    "def Viterbi(A, B, observed):\n",
     "    n_nodes = len(observed)\n",
     "    n_states = A.shape[0]\n",
     "\n",
@@ -66,9 +66,40 @@
     "\n",
     "    f = compute_f(A, B, observed)\n",
     "\n",
-    "    for i in range(n_nodes - 1):\n",
-    "        pmax[i] = np.max(f[i], axis=0) + np.sum(...)\n",
-    "        phi[i] = np.argmax(f[i], axis=0)"
+    "    pmax[0] = np.max(np.log(f[0]), axis=0)\n",
+    "    phi[0] = np.argmax(f[0], axis=0)\n",
+    "\n",
+    "    for i in range(1, n_nodes - 1):\n",
+    "        tmp = (np.log(f[i]).T + pmax[i-1]).T\n",
+    "\n",
+    "        pmax[i] = np.max(tmp, axis=0)\n",
+    "        \n",
+    "        phi[i] = np.argmax(tmp, axis=0)\n",
+    "\n",
+    "    return pmax, phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.32850407, -1.04982212],\n",
+       "        [-1.37832619, -1.37832619]]),\n",
+       " array([[1., 0.],\n",
+       "        [1., 0.]]))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Viterbi(A, B, observed)"
    ]
   }
  ],
@@ -88,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
